[gd_scene load_steps=42 format=3 uid="uid://bmk3tngcrk4xx"]

[ext_resource type="Script" uid="uid://dnlc7rwbsjkv2" path="res://scenes/charactes/enemies/pig_boss.gd" id="1_in0wk"]
[ext_resource type="Texture2D" uid="uid://cd5wgcofir7og" path="res://assets/characters/enemies/jabaliBoss/GoblinKing_attack2.png" id="2_mi1wp"]
[ext_resource type="Texture2D" uid="uid://bsd2gdg5oht0f" path="res://assets/characters/enemies/jabaliBoss/GoblinKing_death.png" id="2_qywvk"]
[ext_resource type="Texture2D" uid="uid://d3bl2wryylivk" path="res://assets/characters/enemies/jabaliBoss/GoblinKing_hurt.png" id="3_mi1wp"]
[ext_resource type="Texture2D" uid="uid://c3njsexsbgs5s" path="res://assets/characters/enemies/jabaliBoss/GoblinKing_attack3.png" id="3_qe54b"]
[ext_resource type="Texture2D" uid="uid://b220n2icx37kr" path="res://assets/characters/enemies/jabaliBoss/GoblinKing_idle.png" id="4_qe54b"]
[ext_resource type="Texture2D" uid="uid://belrc3k3k13hj" path="res://assets/characters/enemies/jabaliBoss/GoblinKing_walk.png" id="5_gjpp1"]

[sub_resource type="AtlasTexture" id="AtlasTexture_gjpp1"]
atlas = ExtResource("2_mi1wp")
region = Rect2(0, 0, 72, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_kqbfr"]
atlas = ExtResource("2_mi1wp")
region = Rect2(72, 0, 72, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_xlitv"]
atlas = ExtResource("2_mi1wp")
region = Rect2(144, 0, 72, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_hyofr"]
atlas = ExtResource("2_mi1wp")
region = Rect2(216, 0, 72, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_y1qpk"]
atlas = ExtResource("2_mi1wp")
region = Rect2(288, 0, 72, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_x7nem"]
atlas = ExtResource("2_mi1wp")
region = Rect2(360, 0, 72, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_q2gr3"]
atlas = ExtResource("3_qe54b")
region = Rect2(0, 0, 72, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_loodv"]
atlas = ExtResource("3_qe54b")
region = Rect2(72, 0, 72, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_n18es"]
atlas = ExtResource("3_qe54b")
region = Rect2(144, 0, 72, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_ttk73"]
atlas = ExtResource("3_qe54b")
region = Rect2(216, 0, 72, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_bkmer"]
atlas = ExtResource("2_qywvk")
region = Rect2(0, 0, 72, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_d8hk8"]
atlas = ExtResource("2_qywvk")
region = Rect2(72, 0, 72, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_ryrcr"]
atlas = ExtResource("2_qywvk")
region = Rect2(144, 0, 72, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_gng0b"]
atlas = ExtResource("2_qywvk")
region = Rect2(216, 0, 72, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_c317a"]
atlas = ExtResource("3_mi1wp")
region = Rect2(0, 0, 72, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_xm5oq"]
atlas = ExtResource("3_mi1wp")
region = Rect2(72, 0, 72, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_nt3k1"]
atlas = ExtResource("3_mi1wp")
region = Rect2(144, 0, 72, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_jwrr4"]
atlas = ExtResource("3_mi1wp")
region = Rect2(216, 0, 72, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_nnnsn"]
atlas = ExtResource("4_qe54b")
region = Rect2(0, 0, 72, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_0j5c3"]
atlas = ExtResource("4_qe54b")
region = Rect2(72, 0, 72, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_rdwa7"]
atlas = ExtResource("4_qe54b")
region = Rect2(144, 0, 72, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_lkmun"]
atlas = ExtResource("4_qe54b")
region = Rect2(216, 0, 72, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_711sh"]
atlas = ExtResource("5_gjpp1")
region = Rect2(0, 0, 72, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_s1fni"]
atlas = ExtResource("5_gjpp1")
region = Rect2(72, 0, 72, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_himhr"]
atlas = ExtResource("5_gjpp1")
region = Rect2(144, 0, 72, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_4haa2"]
atlas = ExtResource("5_gjpp1")
region = Rect2(216, 0, 72, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_aixs2"]
atlas = ExtResource("5_gjpp1")
region = Rect2(288, 0, 72, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_ilp2y"]
atlas = ExtResource("5_gjpp1")
region = Rect2(360, 0, 72, 72)

[sub_resource type="SpriteFrames" id="SpriteFrames_kqbfr"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gjpp1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kqbfr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xlitv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hyofr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y1qpk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x7nem")
}],
"loop": true,
"name": &"atack_carga",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_q2gr3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_loodv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n18es")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ttk73")
}],
"loop": false,
"name": &"attack_cuernada",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bkmer")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d8hk8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ryrcr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gng0b")
}],
"loop": false,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_c317a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xm5oq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nt3k1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jwrr4")
}],
"loop": false,
"name": &"hurt",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nnnsn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0j5c3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rdwa7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lkmun")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_711sh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s1fni")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_himhr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4haa2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aixs2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ilp2y")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_in0wk"]
size = Vector2(94, 76)

[sub_resource type="CircleShape2D" id="CircleShape2D_in0wk"]
radius = 800.902

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qywvk"]
size = Vector2(95.1563, 76.1719)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1rggc"]
bg_color = Color(0.960784, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qywvk"]
bg_color = Color(0.140637, 0.722611, 0.118669, 1)

[node name="PigBoss" type="CharacterBody2D"]
script = ExtResource("1_in0wk")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-10, -71)
scale = Vector2(1.97917, 1.92361)
sprite_frames = SubResource("SpriteFrames_kqbfr")
animation = &"atack_carga"
autoplay = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, -39)
shape = SubResource("RectangleShape2D_in0wk")

[node name="detection_area" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="detection_area"]
position = Vector2(0, -1)
shape = SubResource("CircleShape2D_in0wk")

[node name="enemy_hitbox" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="enemy_hitbox"]
position = Vector2(-1, -39)
shape = SubResource("RectangleShape2D_qywvk")

[node name="take_damage_cooldown" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="BossUI" type="CanvasLayer" parent="."]

[node name="health_bar" type="ProgressBar" parent="BossUI"]
custom_minimum_size = Vector2(900, 40)
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -250.0
offset_right = 250.0
offset_bottom = 7.0
grow_horizontal = 2
theme_override_styles/background = SubResource("StyleBoxFlat_1rggc")
theme_override_styles/fill = SubResource("StyleBoxFlat_qywvk")
max_value = 50.0
step = 1.0
value = 50.0
show_percentage = false

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="body_entered" from="detection_area" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="detection_area" to="." method="_on_detection_area_body_exited"]
[connection signal="area_entered" from="enemy_hitbox" to="." method="_on_enemy_hitbox_area_entered"]
[connection signal="timeout" from="take_damage_cooldown" to="." method="_on_take_damage_cooldown_timeout"]
